updates to login landing page

--- a/src/app/shared/layouts/default/default.component.html
+++ b/src/app/shared/layouts/default/default.component.html
@@ -1,1 +1,11 @@
-<router-outlet></router-outlet>
+<div class="default">
+	<div class="sec-1">
+		<div class="sec-1-content">
+			<div class="font-bold heading-primary">Todo Management</div>
+			<div class="text-lg">A todo management application is a software tool designed to help users organize and track their tasks, responsibilities, and goals in a systematic and efficient manner. These applications are designed to enhance productivity and time management by providing users with a centralized platform to create, prioritize, and manage their to-do lists.</div>
+		</div>
+	</div>
+	<div class="sec-2">
+		<router-outlet></router-outlet>
+	</div>
+</div>
