--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,8 @@
 @import 'styles/base/base';
 
 // Components
+@import 'styles/components/master';
+@import 'styles/components/default';
 @import 'styles/components/header';
 
 // Layouts
