--- a/src/app/shared/layouts/master/master.component.html
+++ b/src/app/shared/layouts/master/master.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<main class="app-wrapper">
+	<div class="container">
+		<router-outlet></router-outlet>
+	</div>
+</main>
