--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,8 @@
 :root {
-	--color-primary: #eb2f64;
+	--color-primary: #2563ea;
 	--color-primary-light: #ff3366;
 	--color-primary-dark: #ba265d;
+
 	--color-white: #fff;
 
 	--color-grey-light-1: #faf9f9;
