--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,3 +4,34 @@ body {
 	font-weight: 400;
 	line-height: 1.7;
 }
+
+.heading-primary {
+	color: var(--color-white);
+	font-size: 4rem;
+	margin-bottom: 1rem;
+}
+
+// text size
+.text-sm {
+	color: var(--color-grey-light-4);
+	font-size: 1.2rem;
+	letter-spacing: 0.1rem;
+}
+
+.text-md {
+	color: var(--color-grey-light-4);
+	font-size: 1.4rem;
+	letter-spacing: 0.1rem;
+}
+
+.text-lg {
+	color: var(--color-grey-light-4);
+	font-size: 1.7rem;
+	letter-spacing: 0.1rem;
+}
+
+.text-xl {
+	color: var(--color-grey-light-4);
+	font-size: 2rem;
+	letter-spacing: 0.1rem;
+}
