--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -10,23 +10,6 @@
 	font-weight: 700;
 }
 
-// text size
-.text-sm {
-	font-size: 1.2rem;
-}
-
-.text-md {
-	font-size: 1.4rem;
-}
-
-.text-lg {
-	font-size: 1.7rem;
-}
-
-.text-xl {
-	font-size: 2rem;
-}
-
 // margin
 .m-1 {
 	margin: 1rem;
@@ -102,5 +85,21 @@
 }
 
 .pb-3 {
+	padding-bottom: 3rem;
+}
+
+// padding top and bottom
+.py-1 {
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
+.py-2 {
+	padding-top: 2rem;
+	padding-bottom: 2rem;
+}
+
+.py-3 {
+	padding-top: 3rem;
 	padding-bottom: 3rem;
 }
