--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,9 +13,12 @@
 @import 'styles/base/base';
 
 // Components
+@import 'styles/components/inputs';
+@import 'styles/components/buttons';
 @import 'styles/components/master';
 @import 'styles/components/default';
 @import 'styles/components/header';
+@import 'styles/components/login';
 
 // Layouts
 @import 'styles/layouts/layout';
