--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,7 @@
 // Components
 @import 'styles/components/inputs';
 @import 'styles/components/buttons';
+@import 'styles/components/icons';
 @import 'styles/components/master';
 @import 'styles/components/default';
 @import 'styles/components/header';
