--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -29,8 +29,10 @@ body {
 	color: var(--color-grey-dark-2);
 	font-size: 1.2rem;
 	letter-spacing: 0.1rem;
+	transition: all 0.2s;
 	&:hover {
 		color: var(--color-grey-dark-3);
+		transform: scale(1.1);
 	}
 }
 
