--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -34,3 +34,18 @@
 		padding: 0.5rem 0 0 0.5rem;
 	}
 }
+
+.password-input-wrapper {
+	position: relative;
+}
+
+.search__button {
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	border: none;
+	background: transparent;
+	cursor: pointer;
+	outline: none;
+}
