--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -12,6 +12,10 @@ body {
 	height: 100%;
 	background-color: #eee;
 	color: var(--color-grey-dark-1);
+
+	@media only screen and (max-width: $bp-large) {
+		font-size: 50%;
+	}
 }
 
 .app-wrapper {
