--- a/src/styles/layouts/_layout.scss
+++ b/src/styles/layouts/_layout.scss
@@ -8,6 +8,9 @@
 
 .default {
 	display: flex;
+	@media only screen and (max-width: $bp-small) {
+		flex-direction: column;
+	}
 
 	.sec-1 {
 		flex: 1 0 0%;
