--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,8 @@
 @import 'styles/components/default';
 @import 'styles/components/header';
 @import 'styles/components/login';
+@import 'styles/components/todo';
+@import 'styles/components/to-do-card';
 
 // Layouts
 @import 'styles/layouts/layout';
