--- a/src/app/shared/components/todo-card/todo-card.component.html
+++ b/src/app/shared/components/todo-card/todo-card.component.html
@@ -1,1 +1,9 @@
-<p>todo-card works!</p>
+<div class="to-do-card-container">
+	<div class="to-do-card-header">
+		<div class="to-do-card-title text-xl">{{ todo.title }}</div>
+		<div class="text-md">{{ todo.description }}</div>
+	</div>
+	<div class="to-do-card-actions">
+		<button class="btn btn-secondary">Open</button>
+	</div>
+</div>
