--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -50,6 +50,7 @@ body {
 
 .text-xl {
 	color: var(--color-grey-light-4);
+	color: var(--color-grey-dark-1);
 	font-size: 2rem;
 	letter-spacing: 0.1rem;
 }
