--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -5,6 +5,7 @@
 	border-radius: 0.4rem;
 	transition: all 0.2s;
 	margin: 1rem 0;
+	cursor: pointer;
 
 	&:hover {
 		transform: translateY(-2px);
@@ -27,4 +28,11 @@
 .btn-primary {
 	color: var(--color-white);
 	background-color: var(--color-primary);
+}
+
+.btn-secondary {
+	border-radius: 7rem;
+	padding: 1rem 2rem;
+	color: var(--color-white);
+	background-color: var(--color-grey-dark-2);
 }
