--- a/src/styles/layouts/_layout.scss
+++ b/src/styles/layouts/_layout.scss
@@ -33,3 +33,22 @@
 		align-items: center;
 	}
 }
+
+.to-do-container {
+	display: flex;
+	flex-direction: column;
+	.to-do-header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.to-do-content {
+		display: flex;
+		flex-direction: column;
+	}
+}
+
+.to-do-card-container {
+	display: flex;
+	justify-content: space-between;
+}
