--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,7 @@
 @import 'styles/components/login';
 @import 'styles/components/todo';
 @import 'styles/components/to-do-card';
+@import 'styles/components/slide-panel';
 
 // Layouts
 @import 'styles/layouts/layout';
