--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -2,3 +2,12 @@
 	font-size: 1.5rem;
 	color: var(--color-grey-dark-2);
 }
+
+.icon:hover {
+	color: var(--color-primary);
+}
+
+.icon-close {
+	font-size: 2.5rem;
+	color: var(--color-grey-dark-2);
+}
