--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,8 +1,9 @@
 .btn {
 	text-transform: uppercase;
-	padding: 1rem 3rem;
+	border-radius: 7rem;
+	padding: 1rem 2rem;
 	border: none;
-	border-radius: 0.4rem;
+	// border-radius: 0.4rem;
 	transition: all 0.2s;
 	margin: 1rem 0;
 	cursor: pointer;
