--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -33,6 +33,21 @@
 		}
 	}
 
+	.form-control-textarea {
+		height: 100%;
+		border: 1px solid #ccc;
+		padding: 0.5rem 0.7rem;
+		resize: none;
+
+		&:focus {
+			outline: none;
+		}
+
+		&::placeholder {
+			color: var(--color-grey-light-4);
+		}
+	}
+
 	.password-input-wrapper {
 		position: relative;
 	}
