--- a/src/styles/components/_to-do-card.scss
+++ b/src/styles/components/_to-do-card.scss
@@ -1,7 +1,7 @@
 .to-do-card-container {
-	border-left: 4px solid var(--color-grey-light-4);
+	border-left: 0.4rem solid var(--color-grey-light-4);
 	padding: 2rem 2rem;
-	border-bottom: 1px solid var(--color-grey-light-4);
+	border-bottom: 0.5px solid var(--color-grey-light-4);
 	.to-do-card-header {
 		padding: 1rem;
 		border-left: 4px solid var(--color-grey-light-4);
