--- a/src/styles/layouts/_layout.scss
+++ b/src/styles/layouts/_layout.scss
@@ -47,6 +47,15 @@
 		flex-direction: column;
 	}
 }
+.to-do-actions {
+	width: 90%;
+	display: flex;
+	flex-direction: column;
+	margin: auto;
+	& > * {
+		margin: 0.5rem 0;
+	}
+}
 
 .to-do-card-container {
 	display: flex;
