--- a/src/app/shared/layouts/header/header.component.html
+++ b/src/app/shared/layouts/header/header.component.html
@@ -2,7 +2,11 @@
 	<div class="header-content">
 		<div class="font-bold text-xl">Todo Management</div>
 		<div>
-			<div class="text-md font-medium cursor-pointer">Login</div>
+			@if (this.isAuthenticated$ | async) {
+				<div class="text-md font-medium cursor-pointer" (click)="onLogout()">Logout</div>
+			} @else {
+				<div class="text-md font-medium cursor-pointer">Login</div>
+			}
 		</div>
 	</div>
 </header>
